# AutoTrading-Template

./: .~lock.another.csv#  1618228149_0.0001.h5  README.md  app.py  lab.txt  output.csv  output_02.csv  profit_calculator.py  requirements.txt  test.csv  test_model.py  testing_02.csv  training.h5  training_02.csv  training_02.h5
AutoTrading-Template-main/: app.py  stock_buy&sell.ipynb
home_stock/: 666.ipynb  Untitled.ipynb  main.py  output.csv  testing_data.csv
home_stock/StockProfitCalculator-master/: README.md  pyproject.toml
lab/lab01/: 1_02.h5  param.txt
lab/lab04/: 4_01.h5  4_03.h5  output_02.csv  param.txt
lab/lab05/: 5_01.h5  5_03.h5  param.txt
lab/lab06/: test.csv
lab/lab07/: 7_02.h5  7_04.h5  7_05.h5  7_06.h5  test_01.csv
lab/lab08/: 8_01.h5  8_02.h5  8_03.h5  8_04.h5  8_06.h5  test_03.csv
lab/lab09/: 9_01.h5
lab01/: 1_01.h5  param.txt
lab02/: 1618130016_0.0001.h5  1618130945_0.0001.h5  1618140384_0.0001.h5  2_03.h5  2_04.h5  param.txt
lab03/: 1618131877_0.0002.h5  1618132238_0.0004.h5  1618132867_0.0002.h5  param.txt
lab04/: 1618158820_0.0003.h5  4_02.h5  output_01.csv  output_03.csv  param.txt
lab05/: 5_02.h5  5_04.h5  param.txt  test_01.csv  test_02.csv
lab06/: param.txt  test_01.csv
lab07/: 7_01.h5  7_03.h5  param.txt  test_02.csv  test_03.csv  test_04.csv  test_05.csv
lab08/: 8_05.h5  param.txt  test_01.csv  test_04.csv  test_05.csv  test_06.csv
lab09/: param.txt  test_01.csv
lob06/: 1618199439_0.0003.h5  param.txt
