[tool.poetry]
name = "stockprofitcalculator"
version = "0.1.0"
description = ""
authors = ["liumi666 <whitepepper4140@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
pandas = "^1.4.4"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
